--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <form>
       <p>Link:
         <input id="Url" type="text/plain">
-        <a id="Button" download><button type="submit">Download</button></a>
+        <a id="Button" download>Download</a>
       </p>
       <script>document.getElementById("Button").href = document.getElementById("Url");</script>
     </form>
