--- a/accessdenied.html
+++ b/accessdenied.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>HTML Meta Tag</title>
+      <title>ACCESS DENIED!</title>
       <meta http-equiv = "refresh" content = "2; url = index.html" />
    </head>
    <body>
-      <p>Hello HTML5!</p>
+      <p>ACCESS DENIED!</p>
    </body>
 </html>
