--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>HTML Meta Tag</title>
+      <title>Matthew's Army | Computer Science B</title>
       <meta http-equiv = "refresh" content = "2; url = accessdenied.html" />
    </head>
    <body>
-      <p>Hello HTML5!</p>
+      <a href="Library_Asteroids.js" download>Library_Asteroids.js: Ver. 1.2.0. DOWNLOAD</a>
    </body>
 </html>
